Debug to make it runnable for HardwareInLoop test tomorrow

--- a/deepc/DeepcTest.ipynb
+++ b/deepc/DeepcTest.ipynb
@@ -649,19 +649,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "7e34527a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "from torch.optim.lr_scheduler import StepLR, ReduceLROnPlateau\n",
-    "import torch.optim as optim\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
     "import os\n",
     "os.environ[\"KMP_DUPLICATE_LIB_OK\"] = \"TRUE\"\n",
     "import time\n",
@@ -672,9 +664,6 @@
     "import numpy as np\n",
     "import scipy.io as sio\n",
     "import pandas as pd\n",
-    "\n",
-    "import Jetson.GPIO as GPIO\n",
-    "GPIO.cleanup()\n",
     "\n",
     "import board\n",
     "import busio\n",
@@ -761,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "ffa844d8",
    "metadata": {},
    "outputs": [],
@@ -771,8 +760,13 @@
     "    g_dim = hankel_subB_size - Tini - THorizon + 1\n",
     "\n",
     "    # desired slice is [start:end] with width = end - start = 2*g_dim\n",
-    "    start = hankel_idx - g_dim\n",
-    "    end   = hankel_idx + g_dim\n",
+    "    # start = hankel_idx - g_dim\n",
+    "    # end   = hankel_idx + g_dim\n",
+    "    # width = end - start\n",
+    "\n",
+    "    half  = g_dim // 2\n",
+    "    start = hankel_idx - half\n",
+    "    end   = hankel_idx + half\n",
     "    width = end - start\n",
     "\n",
     "    # allocate zero‐padded output blocks\n",
@@ -801,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "fd90c763",
    "metadata": {},
    "outputs": [
@@ -815,55 +809,49 @@
     {
      "data": {
       "text/plain": [
-       "(array([[0.        , 0.        , 0.        , ..., 0.30824149, 0.31320107,\n",
-       "         0.3182672 ],\n",
-       "        [0.        , 0.        , 0.        , ..., 0.31320107, 0.3182672 ,\n",
-       "         0.32320421],\n",
-       "        [0.        , 0.        , 0.        , ..., 0.3182672 , 0.32320421,\n",
-       "         0.33562195],\n",
+       "(array([[0.        , 0.        , 0.        , ..., 0.05974853, 0.06472126,\n",
+       "         0.06971344],\n",
+       "        [0.        , 0.        , 0.        , ..., 0.06472126, 0.06971344,\n",
+       "         0.07469696],\n",
+       "        [0.        , 0.        , 0.        , ..., 0.06971344, 0.07469696,\n",
+       "         0.07957678],\n",
        "        ...,\n",
-       "        [0.        , 0.        , 0.        , ..., 1.16128739, 1.20627288,\n",
-       "         1.25085105],\n",
-       "        [0.        , 0.        , 0.        , ..., 1.20627288, 1.25085105,\n",
-       "         1.29533237],\n",
-       "        [0.        , 0.        , 0.        , ..., 1.25085105, 1.29533237,\n",
-       "         1.34078059]], shape=(50, 200)),\n",
-       " array([[0.        , 0.        , 0.        , ..., 1.29533237, 1.34078059,\n",
-       "         1.38524   ],\n",
-       "        [0.        , 0.        , 0.        , ..., 1.34078059, 1.38524   ,\n",
-       "         1.42988851],\n",
-       "        [0.        , 0.        , 0.        , ..., 1.38524   , 1.42988851,\n",
-       "         1.47458422],\n",
+       "        [0.        , 0.        , 0.        , ..., 0.2933221 , 0.29835575,\n",
+       "         0.30326698],\n",
+       "        [0.        , 0.        , 0.        , ..., 0.29835575, 0.30326698,\n",
+       "         0.30823166],\n",
+       "        [0.        , 0.        , 0.        , ..., 0.30326698, 0.30823166,\n",
+       "         0.31320973]], shape=(50, 100)),\n",
+       " array([[0.        , 0.        , 0.        , ..., 0.30823166, 0.31320973,\n",
+       "         0.31825239],\n",
+       "        [0.        , 0.        , 0.        , ..., 0.31320973, 0.31825239,\n",
+       "         0.32341665],\n",
+       "        [0.        , 0.        , 0.        , ..., 0.31825239, 0.32341665,\n",
+       "         0.33563706],\n",
        "        ...,\n",
-       "        [0.        , 0.        , 0.        , ..., 2.70138542, 2.71709686,\n",
-       "         2.73198446],\n",
-       "        [0.        , 0.        , 0.        , ..., 2.71709686, 2.73198446,\n",
-       "         2.74675841],\n",
-       "        [0.        , 0.        , 0.        , ..., 2.73198446, 2.74675841,\n",
-       "         2.75936668]], shape=(50, 200)),\n",
+       "        [0.05974853, 0.06472126, 0.06971344, ..., 1.16177817, 1.20609257,\n",
+       "         1.25084251],\n",
+       "        [0.06472126, 0.06971344, 0.07469696, ..., 1.20609257, 1.25084251,\n",
+       "         1.29618912],\n",
+       "        [0.06971344, 0.07469696, 0.07957678, ..., 1.25084251, 1.29618912,\n",
+       "         1.34055226]], shape=(50, 100)),\n",
        " array([[0., 0., 0., ..., 0., 0., 0.],\n",
        "        [0., 0., 0., ..., 0., 0., 0.],\n",
        "        [0., 0., 0., ..., 0., 0., 0.],\n",
        "        ...,\n",
        "        [0., 0., 0., ..., 0., 0., 0.],\n",
        "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]], shape=(50, 200)),\n",
-       " array([[0.        , 0.        , 0.        , ..., 0.        , 0.        ,\n",
-       "         0.        ],\n",
-       "        [0.        , 0.        , 0.        , ..., 0.        , 0.        ,\n",
-       "         0.        ],\n",
-       "        [0.        , 0.        , 0.        , ..., 0.        , 0.        ,\n",
-       "         0.        ],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.]], shape=(50, 100)),\n",
+       " array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
        "        ...,\n",
-       "        [0.        , 0.        , 0.        , ..., 0.1125229 , 0.11731825,\n",
-       "         0.12221129],\n",
-       "        [0.        , 0.        , 0.        , ..., 0.11731825, 0.12221129,\n",
-       "         0.1271247 ],\n",
-       "        [0.        , 0.        , 0.        , ..., 0.12221129, 0.1271247 ,\n",
-       "         0.13239403]], shape=(50, 200)))"
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.]], shape=(50, 100)))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +861,7 @@
     "DATA_DIR   = PROJECT_DIR / \"dataForHankle\" / \"smallDataSet\"\n",
     "CACHE_FILE_HANKEL_DATA = os.path.join(DATA_DIR, \"hankel_matrix.npz\")         \n",
     "npz_hankel = np.load(CACHE_FILE_HANKEL_DATA)\n",
-    "hankel_full_mtx = npz_hankel['hankel_full_mtx']\n",
+    "# hankel_full_mtx = npz_hankel['hankel_full_mtx']\n",
     "CACHE_FILE_Ori_DATA = os.path.join(DATA_DIR, \"hankel_dataset.npz\")   \n",
     "npz = np.load(CACHE_FILE_Ori_DATA)\n",
     "ud, yd = npz['ud'], npz['yd']\n",
@@ -884,16 +872,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1102e09b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote your_data.xlsx with sheets: ['Up', 'Uf', 'Yp', 'Yf']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "# 1) Load your .npz\n",
+    "PROJECT_DIR = Path().resolve() \n",
+    "DATA_DIR   = PROJECT_DIR / \"dataForHankle\" / \"smallDataSet\"\n",
+    "CACHE_FILE_HANKEL_DATA = os.path.join(DATA_DIR, \"hankel_matrix.npz\")         \n",
+    "npz_hankel = np.load(CACHE_FILE_HANKEL_DATA)\n",
+    "\n",
+    "# 2) Create an Excel writer (requires openpyxl, which is installed by default in most envs)\n",
+    "with pd.ExcelWriter('excel_hankel.xlsx', engine='openpyxl') as writer:\n",
+    "    # Iterate all arrays stored in the .npz\n",
+    "    for name in npz_hankel.files:\n",
+    "        arr = npz_hankel[name]               # e.g. shape (1000, 2000)\n",
+    "        if arr.ndim == 2 and arr.shape[1] > 16384:\n",
+    "            df = pd.DataFrame(arr.T)\n",
+    "        else:\n",
+    "            df = pd.DataFrame(arr)\n",
+    "        sheet = name[:31]  # sheet names max 31 chars\n",
+    "        df.to_excel(writer, sheet_name=sheet, index=False)\n",
+    "\n",
+    "print(\"Wrote your_data.xlsx with sheets:\", npz_hankel.files)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "drivingRobot",
    "language": "python",
    "name": "python3"
   },
@@ -907,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.17"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
