--- a/script/CANTest.ipynb
+++ b/script/CANTest.ipynb
@@ -16,19 +16,27 @@
     "sudo modprobe mttcan                             # on-board CAN controller\n",
     "sudo modprobe kvaser_usb                         # USB Kvaser Leaf\n",
     "\n",
+    "# on computer\n",
+    "sudo modprobe can       # core CAN support\n",
+    "sudo modprobe can_raw   # raw-socket protocol\n",
+    "sudo modprobe can_dev   # network interface “canX” support\n",
+    "sudo modprobe kvaser_usb\n",
+    "\n",
     "# Bring up the on-board CAN as can0 @ 500 kbps\n",
+    "# Bring up the USB Kvaser as can1 @ 500 kbps\n",
+    "# (replace ‘can1’ with whatever `ip link` shows if it’s different)\n",
     "sudo ip link set can0 down                         # if it was already up\n",
     "sudo ip link set can0 type can bitrate 500000\n",
     "sudo ip link set can0 up\n",
-    "\n",
-    "# Bring up the USB Kvaser as can1 @ 500 kbps\n",
-    "# (replace ‘can1’ with whatever `ip link` shows if it’s different)\n",
     "sudo ip link set can1 down\n",
     "sudo ip link set can1 type can bitrate 500000\n",
     "sudo ip link set can1 up\n",
     "sudo ip link set can2 down\n",
     "sudo ip link set can2 type can bitrate 500000\n",
     "sudo ip link set can2 up\n",
+    "\n",
+    "ls /sys/class/net/ | grep can\n",
+    "i2cdetect -l (find what the number i2c device lie and change that parameter)\n",
     "\n",
     "# Verify both are up\n",
     "ip link show can0\n",
@@ -66,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "036c1c81",
    "metadata": {},
    "outputs": [
@@ -75,19 +83,18 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mcan\u001b[39;00m\n\u001b[1;32m      3\u001b[0m bus \u001b[38;5;241m=\u001b[39m can\u001b[38;5;241m.\u001b[39minterface\u001b[38;5;241m.\u001b[39mBus(channel\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcan1\u001b[39m\u001b[38;5;124m'\u001b[39m, interface\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msocketcan\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m msg \u001b[38;5;129;01min\u001b[39;00m bus:\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mID: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmsg\u001b[38;5;241m.\u001b[39marbitration_id\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m03X\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m  Data: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmsg\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mhex()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/can/bus.py:382\u001b[0m, in \u001b[0;36mBusABC.__iter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    370\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Allow iteration on messages as they are received.\u001b[39;00m\n\u001b[1;32m    371\u001b[0m \n\u001b[1;32m    372\u001b[0m \u001b[38;5;124;03m.. code-block:: python\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    379\u001b[0m \u001b[38;5;124;03m    :class:`Message` msg objects.\u001b[39;00m\n\u001b[1;32m    380\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    381\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m--> 382\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrecv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1.0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    383\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m msg \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    384\u001b[0m         \u001b[38;5;28;01myield\u001b[39;00m msg\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/can/bus.py:127\u001b[0m, in \u001b[0;36mBusABC.recv\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    123\u001b[0m time_left \u001b[38;5;241m=\u001b[39m timeout\n\u001b[1;32m    125\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m    126\u001b[0m     \u001b[38;5;66;03m# try to get a message\u001b[39;00m\n\u001b[0;32m--> 127\u001b[0m     msg, already_filtered \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_recv_internal\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtime_left\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    129\u001b[0m     \u001b[38;5;66;03m# return it, if it matches\u001b[39;00m\n\u001b[1;32m    130\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m msg \u001b[38;5;129;01mand\u001b[39;00m (already_filtered \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_matches_filters(msg)):\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/can/interfaces/socketcan/socketcan.py:746\u001b[0m, in \u001b[0;36mSocketcanBus._recv_internal\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    740\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m_recv_internal\u001b[39m(\n\u001b[1;32m    741\u001b[0m     \u001b[38;5;28mself\u001b[39m, timeout: Optional[\u001b[38;5;28mfloat\u001b[39m]\n\u001b[1;32m    742\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Tuple[Optional[Message], \u001b[38;5;28mbool\u001b[39m]:\n\u001b[1;32m    743\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    744\u001b[0m         \u001b[38;5;66;03m# get all sockets that are ready (can be a list with a single value\u001b[39;00m\n\u001b[1;32m    745\u001b[0m         \u001b[38;5;66;03m# being self.socket or an empty list if self.socket is not ready)\u001b[39;00m\n\u001b[0;32m--> 746\u001b[0m         ready_receive_sockets, _, _ \u001b[38;5;241m=\u001b[39m \u001b[43mselect\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mselect\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msocket\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    747\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m error:\n\u001b[1;32m    748\u001b[0m         \u001b[38;5;66;03m# something bad happened (e.g. the interface went down)\u001b[39;00m\n\u001b[1;32m    749\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m can\u001b[38;5;241m.\u001b[39mCanOperationError(\n\u001b[1;32m    750\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFailed to receive: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00merror\u001b[38;5;241m.\u001b[39mstrerror\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, error\u001b[38;5;241m.\u001b[39merrno\n\u001b[1;32m    751\u001b[0m         ) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merror\u001b[39;00m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mcan\u001b[39;00m\n\u001b[32m      2\u001b[39m bus = can.interface.Bus(channel=\u001b[33m'\u001b[39m\u001b[33mcan1\u001b[39m\u001b[33m'\u001b[39m, interface=\u001b[33m'\u001b[39m\u001b[33msocketcan\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mmsg\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mbus\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43mf\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mID: \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mmsg\u001b[49m\u001b[43m.\u001b[49m\u001b[43marbitration_id\u001b[49m\u001b[38;5;132;43;01m:\u001b[39;49;00m\u001b[33;43m03X\u001b[39;49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[33;43m  Data: \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mmsg\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m.\u001b[49m\u001b[43mhex\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/drivingRobot/lib/python3.13/site-packages/can/bus.py:382\u001b[39m, in \u001b[36mBusABC.__iter__\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    370\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Allow iteration on messages as they are received.\u001b[39;00m\n\u001b[32m    371\u001b[39m \n\u001b[32m    372\u001b[39m \u001b[33;03m.. code-block:: python\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    379\u001b[39m \u001b[33;03m    :class:`Message` msg objects.\u001b[39;00m\n\u001b[32m    380\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    381\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m382\u001b[39m     msg = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mrecv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1.0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    383\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m msg \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    384\u001b[39m         \u001b[38;5;28;01myield\u001b[39;00m msg\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/drivingRobot/lib/python3.13/site-packages/can/bus.py:127\u001b[39m, in \u001b[36mBusABC.recv\u001b[39m\u001b[34m(self, timeout)\u001b[39m\n\u001b[32m    123\u001b[39m time_left = timeout\n\u001b[32m    125\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m    126\u001b[39m     \u001b[38;5;66;03m# try to get a message\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m127\u001b[39m     msg, already_filtered = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_recv_internal\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtime_left\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    129\u001b[39m     \u001b[38;5;66;03m# return it, if it matches\u001b[39;00m\n\u001b[32m    130\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m msg \u001b[38;5;129;01mand\u001b[39;00m (already_filtered \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._matches_filters(msg)):\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/drivingRobot/lib/python3.13/site-packages/can/interfaces/socketcan/socketcan.py:746\u001b[39m, in \u001b[36mSocketcanBus._recv_internal\u001b[39m\u001b[34m(self, timeout)\u001b[39m\n\u001b[32m    740\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_recv_internal\u001b[39m(\n\u001b[32m    741\u001b[39m     \u001b[38;5;28mself\u001b[39m, timeout: Optional[\u001b[38;5;28mfloat\u001b[39m]\n\u001b[32m    742\u001b[39m ) -> Tuple[Optional[Message], \u001b[38;5;28mbool\u001b[39m]:\n\u001b[32m    743\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m    744\u001b[39m         \u001b[38;5;66;03m# get all sockets that are ready (can be a list with a single value\u001b[39;00m\n\u001b[32m    745\u001b[39m         \u001b[38;5;66;03m# being self.socket or an empty list if self.socket is not ready)\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m746\u001b[39m         ready_receive_sockets, _, _ = \u001b[43mselect\u001b[49m\u001b[43m.\u001b[49m\u001b[43mselect\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43msocket\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    747\u001b[39m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m error:\n\u001b[32m    748\u001b[39m         \u001b[38;5;66;03m# something bad happened (e.g. the interface went down)\u001b[39;00m\n\u001b[32m    749\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m can.CanOperationError(\n\u001b[32m    750\u001b[39m             \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mFailed to receive: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00merror.strerror\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m, error.errno\n\u001b[32m    751\u001b[39m         ) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merror\u001b[39;00m\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
    "source": [
     "import can\n",
-    "\n",
     "bus = can.interface.Bus(channel='can1', interface='socketcan')\n",
     "for msg in bus:\n",
     "    print(f\"ID: {msg.arbitration_id:03X}  Data: {msg.data.hex()}\")"
@@ -8211,7 +8218,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "drivingRobot",
    "language": "python",
    "name": "python3"
   },
@@ -8225,7 +8232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.17"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
