integrated PID controller and DeePC controller so that it runs nominal baseline PID controller if DeePC controller solution is not feasiable

--- a/script/Controller.ipynb
+++ b/script/Controller.ipynb
@@ -253,11 +253,198 @@
     "    pca.channels[ch].duty_cycle = 0\n",
     "pca.deinit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "11419175",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'deepc'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mcantools\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mcan\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdeepc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils_deepc\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m init_pca9685, set_duty_cycle\n\u001b[32m     11\u001b[39m \u001b[38;5;66;03m# ────────── Globals ──────────\u001b[39;00m\n\u001b[32m     12\u001b[39m latest_speed = \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'deepc'"
+     ]
+    }
+   ],
+   "source": [
+    "#!/usr/bin/env python3\n",
+    "import time\n",
+    "import threading\n",
+    "import numpy as np\n",
+    "from smbus2 import SMBus\n",
+    "import cantools\n",
+    "import can\n",
+    "\n",
+    "from deepc.utils_deepc import init_pca9685, set_duty_cycle\n",
+    "\n",
+    "# ────────── Globals ──────────\n",
+    "latest_speed = None\n",
+    "dyno_can_running = True\n",
+    "CP2112_BUS = 13\n",
+    "\n",
+    "# ───────── CAN Listener (reads 'Speed_and_Force') ─────────\n",
+    "def dyno_can_listener_thread(dbc_path: str, can_iface: str):\n",
+    "    global latest_speed, dyno_can_running\n",
+    "    db = cantools.database.load_file(dbc_path)\n",
+    "    msg_def = db.get_message_by_name('Speed_and_Force')\n",
+    "    bus = can.interface.Bus(channel=can_iface, interface='socketcan')\n",
+    "    while dyno_can_running:\n",
+    "        msg = bus.recv(timeout=1.0)\n",
+    "        if msg and msg.arbitration_id == msg_def.frame_id:\n",
+    "            decoded = db.decode_message(msg.arbitration_id, msg.data)\n",
+    "            s = decoded.get('Speed_kph', 0.0)\n",
+    "            latest_speed = float(s)\n",
+    "    bus.shutdown()\n",
+    "\n",
+    "# ───────── Relay Auto-Tuner ─────────\n",
+    "class RelayAutoTuner:\n",
+    "    def __init__(self, apply_control, measure_output, relay_amp=10.0):\n",
+    "        self.apply_control = apply_control\n",
+    "        self.measure_output = measure_output\n",
+    "        self.relay_amp = relay_amp\n",
+    "\n",
+    "    def tune(self, duration=10.0, dt=0.05):\n",
+    "        t0 = time.time()\n",
+    "        toggle = True\n",
+    "        data_t, data_y = [], []\n",
+    "        next_toggle = t0\n",
+    "        while time.time() - t0 < duration:\n",
+    "            now = time.time()\n",
+    "            if now >= next_toggle:\n",
+    "                u = self.relay_amp if toggle else -self.relay_amp\n",
+    "                self.apply_control(u)\n",
+    "                toggle = not toggle\n",
+    "                next_toggle += dt\n",
+    "            y = self.measure_output()\n",
+    "            data_t.append(now - t0)\n",
+    "            data_y.append(y)\n",
+    "            time.sleep(dt)\n",
+    "\n",
+    "        # Estimate Tu from zero crossings\n",
+    "        zs = [data_t[i] for i in range(1, len(data_y))\n",
+    "              if data_y[i-1] * data_y[i] < 0]\n",
+    "        Tu = 2 * np.mean(np.diff(zs))\n",
+    "        amp = (max(data_y) - min(data_y)) / 2\n",
+    "        Ku = (4 * self.relay_amp) / (np.pi * amp)\n",
+    "\n",
+    "        # Ziegler–Nichols PID tuning\n",
+    "        Kp = 0.6 * Ku\n",
+    "        Ki = Kp / (0.5 * Tu)\n",
+    "        Kd = 0.125 * Kp * Tu\n",
+    "        return Kp, Ki, Kd\n",
+    "\n",
+    "# ───────── Gain-Scheduled PID ─────────\n",
+    "class GainSchedulerPID:\n",
+    "    def __init__(self, apply_control, measure_output):\n",
+    "        self.schedule = {}  # map setpoint → (Kp, Ki, Kd, Kff)\n",
+    "        self.apply_control = apply_control\n",
+    "        self.measure_output = measure_output\n",
+    "\n",
+    "    def add_tuned_point(self, setpoint, tuner, **kwargs):\n",
+    "        Kp, Ki, Kd = tuner.tune(**kwargs)\n",
+    "        self.schedule[setpoint] = (Kp, Ki, Kd, 0.0)\n",
+    "\n",
+    "    def get_gains(self, sp):\n",
+    "        keys = sorted(self.schedule.keys())\n",
+    "        if sp <= keys[0]:\n",
+    "            return self.schedule[keys[0]]\n",
+    "        if sp >= keys[-1]:\n",
+    "            return self.schedule[keys[-1]]\n",
+    "        for i in range(len(keys)-1):\n",
+    "            k0, k1 = keys[i], keys[i+1]\n",
+    "            if k0 <= sp <= k1:\n",
+    "                g0 = np.array(self.schedule[k0])\n",
+    "                g1 = np.array(self.schedule[k1])\n",
+    "                α = (sp - k0) / (k1 - k0)\n",
+    "                return tuple(((1-α)*g0 + α*g1).tolist())\n",
+    "\n",
+    "    def control(self, setpoint, prev_error, integral, dt):\n",
+    "        pv = self.measure_output()\n",
+    "        error = setpoint - pv\n",
+    "        Kp, Ki, Kd, Kff = self.get_gains(setpoint)\n",
+    "        integral += error * dt\n",
+    "        derivative = (error - prev_error) / dt\n",
+    "        u = Kp*error + Ki*integral + Kd*derivative + Kff*(setpoint - pv)\n",
+    "        return u, error, integral\n",
+    "\n",
+    "# ───────── Main Application ─────────\n",
+    "def main():\n",
+    "    global dyno_can_running\n",
+    "\n",
+    "    # 1) Initialize PCA9685 PWM via CP2112\n",
+    "    bus = SMBus(CP2112_BUS)\n",
+    "    init_pca9685(bus, freq_hz=1000.0)\n",
+    "\n",
+    "    # 2) Start CAN thread\n",
+    "    dbc = '/path/to/KAVL_V3.dbc'\n",
+    "    can_thread = threading.Thread(\n",
+    "        target=dyno_can_listener_thread,\n",
+    "        args=(dbc, 'can0'),\n",
+    "        daemon=True\n",
+    "    )\n",
+    "    can_thread.start()\n",
+    "\n",
+    "    # 3) PWM helper\n",
+    "    def apply_pwm(u):\n",
+    "        u = float(np.clip(u, -15.0, 100.0))\n",
+    "        if u >= 0:\n",
+    "            set_duty_cycle(bus, 4, 0.0)\n",
+    "            set_duty_cycle(bus, 0, u)\n",
+    "        else:\n",
+    "            set_duty_cycle(bus, 0, 0.0)\n",
+    "            set_duty_cycle(bus, 4, -u)\n",
+    "\n",
+    "    # 4) Speed measurement helper\n",
+    "    def measure_speed():\n",
+    "        return latest_speed or 0.0\n",
+    "\n",
+    "    # 5) Build tuner and gain scheduler\n",
+    "    relay_tuner = RelayAutoTuner(apply_pwm, measure_speed, relay_amp=10.0)\n",
+    "    pid_sched   = GainSchedulerPID(apply_pwm, measure_speed)\n",
+    "\n",
+    "    # 6) Offline tuning at key speeds (kph)\n",
+    "    for sp in [0.0, 20.0, 60.0]:\n",
+    "        input(f\"Press Enter when vehicle holds ~{sp} kph...\")\n",
+    "        Kp, Ki, Kd = relay_tuner.tune(duration=12.0, dt=0.1)\n",
+    "        pid_sched.schedule[sp] = (Kp, Ki, Kd, 0.0)\n",
+    "        print(f\"Tuned @ {sp} kph → Kp={Kp:.2f}, Ki={Ki:.3f}, Kd={Kd:.3f}\")\n",
+    "\n",
+    "    # 7) Real-time gain-scheduled PID loop\n",
+    "    prev_e, integ = 0.0, 0.0\n",
+    "    Ts = 0.01  # 100 Hz\n",
+    "    try:\n",
+    "        print(\"Starting gain-scheduled PID. Ctrl+C to stop.\")\n",
+    "        while True:\n",
+    "            setpoint = 30.0  # or replace with drive-cycle interpolation\n",
+    "            u, prev_e, integ = pid_sched.control(setpoint, prev_e, integ, Ts)\n",
+    "            apply_pwm(u)\n",
+    "            time.sleep(Ts)\n",
+    "\n",
+    "    except KeyboardInterrupt:\n",
+    "        print(\"Shutting down...\")\n",
+    "\n",
+    "    finally:\n",
+    "        dyno_can_running = False\n",
+    "        can_thread.join(timeout=1.0)\n",
+    "        # zero all PWM outputs\n",
+    "        for ch in range(16):\n",
+    "            set_duty_cycle(bus, ch, 0.0)\n",
+    "        bus.close()\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "drivingRobot",
    "language": "python",
    "name": "python3"
   },
@@ -271,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.17"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
